@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-07-22T01:41:39Z",
+  "timestamp" : "2022-07-22T08:22:26Z",
   "count_outdated" : 371,
   "uniques_outdated" : 234,
-  "count" : 398,
+  "count" : 397,
   "uniques" : 250,
   "clones" : [
     {
       "timestamp": "2022-07-08T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
