@@ -1,3 +1,10 @@
+2022-07-22T08:22:26Z:
+* notice: last 14d: unq all: 6 26
+* notice: prev accum: outdated-unq outdated-all / unq all: 234 371 / 250 398
+* notice: next accum: outdated-unq outdated-all / unq all: 234 371 / 250 397
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
+* notice: removed / changed dates: [] / [2022-07-08]
+
 2022-07-22T01:41:39Z:
 * notice: last 14d: unq all: 6 27
 * notice: prev accum: outdated-unq outdated-all / unq all: 234 371 / 250 397
